Fixed footer social media alignment

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -710,7 +710,7 @@ img{
 }
 
 .footer-social-icon {
-	margin-right: 20px;
+	margin-left: 20px;
 }
 
 .subscribe-fields {
